tests/control_flow/valid/conditionals/if_else_if.src
fn main() -> int {
    int x = 0;
    if (x > 0) {
        return 1;
    } else {
        if (x == 0) {
            return 0;
        } else {
            return -1;
        }
    }
}