tests/control_flow/invalid/type_errors/if_non_bool_condition.src
fn main() -> int {
    int x = 5;
    if (x + 1) {
        return 1;
    }
    return 0;
}